<resources>
    <string name="app_name">Foody</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorites</string>
    <string name="food_joke_fragment">Joke</string>
    <string name="order">order</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="diary_free">Diary Free</string>
    <string name="save_to_favorites">Save to favorites</string>
    <string name="no_favorite_recipes">No favorite Recipes</string>
    <string name="delete_favorite_menu">Delete Favorite menu</string>
    <string name="delete_all">Delete All</string>
    <string name="share">Share</string>
</resources>